[tool.black]
line-length = 100
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "user-microservice"
version = "0.1.0"
description = ""
authors = ["Javicle <supergamer.08.2006@gmail.com>"]
readme = "README.md"

packages = [
    { include = "src/" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = "^2.0.37"
redis = "^5.2.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.0.3"
tools-openverse = {git = "https://github.com/Javicle/_ToolsOpenVerse.git"}
asyncpg = "^0.30.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
